tests/compile-fail/Rule_8_7.rs
pub const LIBRARY_GLOBAL: u32 = 0;
//~^ ERROR Non-compliant - public but not used
